Try to disable selection highlights of images in most browsers.

--- a/board.css
+++ b/board.css
@@ -15,3 +15,10 @@ div, span {
     background-color:  #808080;
     display         :  inline-block;
 }
+
+img {
+    -webkit-user-select:  none;
+    -khtml-user-select :  none;
+    -moz-user-select   :  none;
+    -ms-user-select    :  none;
+}
