--- a/board.css
+++ b/board.css
@@ -7,6 +7,12 @@ div, span, table {
     line-height     :  0%;
     border-collapse :  collapse;
 }
+p, li {
+    white-space     :  pre-wrap;
+}
+a {
+    white-space     :  normal;
+}
 
 td.n {
     width           :  40px;
