--- a/board.css
+++ b/board.css
@@ -34,3 +34,7 @@ table, tr, td { /* Disable highlight selection in most browsers. */
     -webkit-user-select:  none;
     -ms-user-select    :  none;
 }
+
+tr { /* Prevent the chess board from wrapping squares to new lines. */
+    -white-space       :  nowrap /* for viewing on small mobile phones */
+}
